# agentic_rag

./: .env.example  .gitignore  README.md  README_WEB.md  agent_results.json  agent_results_intermediate.json  app.py  design.md  documents_chunks.json  example.py  process_questions.py  pyproject.toml  requirements.txt  run.md  system.md
agent/: __init__.py  agent.py  config.py  prompt.py  schema.py  states.py  utils.py
core/: model.py
datatest/: test.json
documents/: data.txt
rag/: documents_embedding.py  documents_processing.py  rag_example.py
static/: index.html
store/: __init__.py  conversation_store.py  memory_extractor.py  memory_store.py
